<resources>
    <string name="app_name">My Application</string>
    <string name="splash_name">로그인</string>
    <string name="title_home">홈</string>
    <string name="title_dashboard">게시판</string>
    <string name="title_notifications">알림</string>
    <string name="title_meeting">과팅</string>
    <string name="title_chatting">채팅</string>
    <string name="title_user_setting">유저 설정</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1020344948383427</string> <string name="fb_login_protocol_scheme">fb1020344948383427</string>
    <string name="kakao_app_key">baa030f557c07d07cbe83930b4e9099f</string>

</resources>