<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications2"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_hearts"
            app:destination="@id/navigation_hearts" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_chatting"
            app:destination="@id/navigation_chatting" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_hearts"
        android:name="com.example.myapplication.ui.hearts.HeartsFragment"
        android:label="@string/title_hearts"
        tools:layout="@layout/fragment_hearts" />

    <fragment
        android:id="@+id/navigation_chatting"
        android:name="com.example.myapplication.ui.chatting.ChattingFragment"
        android:label="@string/title_chatting"
        tools:layout="@layout/fragment_chatting" />

</navigation>